--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,17 @@ jspm_packages
 
 # Login details and other private stuff
 config.js
+
+# Example api json responses
+example.*.json
+
+# JSON file for temp js pastes
+test.js
+
+# WebStorm stuff
+.idea
+
+# Channel config
+channels.js
+
+dump.json
