--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "node_modules/eslint/bin/eslint.js  **/*.js",
+    "lint": "node_modules/eslint/bin/eslint.js .",
     "start": "node index.js",
     "dbcreate": "node Utils/dbinit.js"
   },
