--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,20 @@
 {
-    "extends": "standard",
-    "installedESLint": true,
-    "indent": ["error", 2],
+    "extends": [
+        "standard",
+        "eslint:recommended"
+    ],
     "plugins": [
         "standard",
         "promise"
     ],
     "env": {
         "node": true
+    },
+    "rules": {
+        "indent": [
+            "error",
+            2
+        ],
+        "no-console": "off"
     }
 }
