--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-feedback",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Bot for the Discord Feedback server",
   "main": "index.js",
   "scripts": {
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "bugsnag": "^1.9.1",
-    "discordie": "^0.10.0",
+    "discordie": "github:qeled/discordie#dev",
     "html-entities": "^1.2.1",
     "moment": "^2.18.1",
     "require-directory": "^2.1.1",
