Revert discordie requirement
rip dev version, you will be missed :c

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "bugsnag": "^1.9.1",
-    "discordie": "github:qeled/discordie#dev",
+    "discordie": "^0.10.0",
     "html-entities": "^1.2.1",
     "moment": "^2.18.1",
     "require-directory": "^2.1.1",
