--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceRoot}\\index.js",
+      "program": "${workspaceRoot}/index.js",
       "cwd": "${workspaceRoot}"
     },
     {
