--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "bugsnag": "^1.9.1",
-    "discordie": "^0.10.0",
+    "discordie": "git://github.com/qeled/discordie.git#dev",
     "html-entities": "^1.2.1",
     "moment": "^2.18.1",
     "require-directory": "^2.1.1",
