--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "discordie": "git://github.com/qeled/discordie.git#dev",
+    "git-rev-sync": "^1.9.1",
     "html-entities": "^1.2.1",
     "moment": "^2.18.1",
     "raven": "^2.1.2",
