--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "discordie": "git://github.com/qeled/discordie.git#dev",
     "git-rev-sync": "^1.9.1",
     "html-entities": "^1.2.1",
+    "ioredis": "^3.1.4",
     "moment": "^2.18.1",
     "raven": "^2.1.2",
     "require-directory": "^2.1.1",
