--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "extends": [
         "standard",
-        "eslint:recommended"
+        "eslint:recommended",
+        "plugin:promise/recommended"
     ],
     "plugins": [
         "standard",
