--- a/wercker.yml
+++ b/wercker.yml
@@ -12,5 +12,5 @@ build:
         code: |
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
-    - Dougley/step-pretty-slack-notify:
+    - dougley/pretty-slack-notify@0.3.5:
         webhook_url: $DISCORD_WEBHOOK_URL
